last commit rania

--- a/www/app/list/list.html
+++ b/www/app/list/list.html
@@ -8,7 +8,7 @@
                     <div class="col list-left"><span class="list-title">{{p.name}}</span><br><span class="list-service">Service(s) : {{p.service}}</span><br>
                         <i class="icon ion-star star-color"></i><i class="icon ion-star"></i><i class="icon ion-star"></i><i class="icon ion-star"></i><i class="icon ion-star"></i> 25 avis
                     </div>
-                    <div class="col list-right"><i class="icon ion-chevron-right"></i></div>
+                    <div class="col list-right"><span class="rigth-info">{{p.codePostal}}</span><i class="icon ion-chevron-right"></i></div>
                 </div>
             </ion-item>
         </ion-list>
