--- a/www/app/login/login.html
+++ b/www/app/login/login.html
@@ -3,13 +3,13 @@
     <div class="login-container">
       <h1>Se connecter</h1>
       <form>
-        <input type="text"  class="text-form" ng-model="user.email" placeholder="Email" />
-        <input type="password"   class="text-form" ng-model="user.password" placeholder="Mot de passe" />
+        <input type="text" ng-blur="blur()" ng-focus="focus()"  class="text-form" ng-model="user.email" placeholder="Email" />
+        <input type="password" ng-blur="blur()" ng-focus="focus()"  class="text-form" ng-model="user.password" placeholder="Mot de passe" />
       </form>
       <p class="login-para">
         <a ui-sref="app.register"> Je veux m'inscrire</a>
       </p>
-      <div class="login-button">
+      <div class="login-button" ng-if="!focused">
         <button  class="button button-large button-positive neemaa-button-footer" ng-click="login(user)">CONFIRMER</button>
       </div>
     </div>
