--- a/www/app/register/register.html
+++ b/www/app/register/register.html
@@ -7,7 +7,7 @@
       <input type="password" class="text-form"  ng-blur="blur()" ng-focus="focus()" data-ng-model="user.password_confirm" placeholder="Confirmation mot de passe" />
       <p>Déja inscrit ? <a ui-sref="app.login">Cliquez ici</a></p>
 
-      <ion-checkbox class="register-check"ng-model="user.type" >Je suis prestataires de services. Je veux m'inscrire en tant que NeemStyler</ion-checkbox>
+      <ion-checkbox class="register-check"ng-model="user.partner" >Je suis prestataires de services. Je veux m'inscrire en tant que NeemStyler</ion-checkbox>
 
     </form>
 
