--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -17,25 +17,25 @@
     <ion-content>
       <ion-list>
         <ion-item menu-close ui-sref="app.search">
-          <i class="ion-search"></i> Rechercher un service
+          <i class="menu-lat ion-search"></i> Rechercher un service
         </ion-item>
         <ion-item menu-close>
-          <i class="ion-help-buoy"></i> Comment ca marche ?
+          <i class=" menu-lat ion-help-buoy"></i> Comment ca marche ?
         </ion-item>
         <ion-item menu-close>
-          <i class="ion-ios-plus"></i> Prendre Rendez-Vous
+          <i class="menu-lat ion-ios-plus"></i> Prendre Rendez-Vous
         </ion-item>
         <ion-item menu-close>
-          <i class="ion-calendar"></i> Mes Rendez-Vous
+          <i class="menu-lat ion-calendar"></i> Mes Rendez-Vous
         </ion-item>
-        <ion-item menu-close  ui-sref="app.userProfil" data-ng-if="!checkIsPartner()">
-          <i class="ion-person"></i> Mon Profil
+        <ion-item menu-close  ui-sref="app.userProfil" >
+          <i class="menu-lat ion-person"></i> Mon Profil
         </ion-item>
         <ion-item menu-close  ui-sref="app.partnerProfil" data-ng-if="checkIsPartner()">
-          <i class="ion-person"></i> Mon Profil NeemStyler
+          <i class="menu-lat ion-person"></i> Mon Profil NeemStyler
         </ion-item>
         <ion-item menu-close>
-         <i class="ion-compose"></i> Nous Contacter
+         <i class="menu-lat ion-compose"></i> Nous Contacter
         </ion-item>
       </ion-list>
     </ion-content>
